[tool.poetry]
name = "pydbsp"
version = "0.3.3"
description = "A pure-python implementation of the database signal processing theory stream processing paradigm"
authors = ["brurucy <brurucy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pydbsp"}]
include = ["assets/*"]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.2"
jupyterlab = "^4.2.3"
jupyterlab-code-formatter = "^2.2.1"
jupyterlab-vim = "^4.1.3"
jupyterlab-lsp = "^5.1.0"
jldracula = "^0.2.0"
tqdm = "^4.66.5"
seaborn = "^0.13.2"
pandas = "^2.2.2"
ipywidgets = "^8.1.5"

[tool.ruff]
line-length = 120
src = [ "pydbsp" ]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
include = [ "pydbsp" ]
exclude = [ ".venv" ]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
