[project]
name = "pydbsp"
version = "0.6.0"
description = "A pure-python implementation of the database signal processing theory stream processing paradigm"
authors = [{ name = "brurucy", email = "brurucy@gmail.com" }]
readme = "README.md"
license = "MIT"
dependencies = [
    "ipykernel>=7.0.1",
]

[tool.ruff]
line-length = 120
src = [ "pydbsp" ]

[tool.hatch.build.targets.sdist]
include = [
    "pydbsp",
    "assets/*",
]

[tool.hatch.build.targets.wheel]
include = [
    "pydbsp",
    "assets/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
include = [ "pydbsp" ]
exclude = [ ".venv" ]
typeCheckingMode = "strict"
