[project]
name = "pydbsp"
version = "1.0.0"
description = "A pure-python implementation of the database signal processing theory stream processing paradigm"
authors = [{ name = "brurucy", email = "brurucy@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotnine>=0.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["pydbsp", "assets", "README.md"]
exclude = [
  "**/__pycache__",
  "**/*.py[cod]",
  "**/.pytest_cache",
  "**/.DS_Store",
]

[tool.hatch.build.targets.wheel]
packages = ["pydbsp"]
exclude = [
  "**/__pycache__",
  "**/*.py[cod]",
  "**/.pytest_cache",
  "**/.DS_Store",
]

[dependency-groups]
dev = [
    "ruff>=0.5.5",
    "pytest>=8.3.2",
    "jupyterlab>=4.2.3",
    "jupyterlab-code-formatter>=2.2.1",
    "jupyterlab-vim>=4.1.3",
    "jupyterlab-lsp>=5.1.0",
    "jldracula>=0.2.0",
    "tqdm>=4.66.5",
    "seaborn>=0.13.2",
    "pandas>=2.2.2",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
]

[tool.ruff]
line-length = 120
src = ["pydbsp"]

[tool.ruff.lint]
# Short single-letter names match the DBSP literature's notation —
# ``l`` / ``r`` for left/right join args, ``I`` for the Integrate
# operator symbol. Bound-lambda closures likewise serve as inline
# algebraic expressions that would only obscure intent as named defs.
ignore = ["E741", "E731"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
include = ["pydbsp"]
exclude = [".venv"]
typeCheckingMode = "strict"
